--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "track-mail-2019-valentina",
-  "homepage": "https://your_gh_login.github.io/your_repo_name",
+  "homepage": "https://dvalentina.github.io/2019-2-Track-Frontend-V-Danilova",
   "description": "Mail.Ru Group Frontend Track course, 2019",
   "version": "0.1.0",
   "author": "Valentina",
