Fixed npm run test in web-components

--- a/web-components/package.json
+++ b/web-components/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:js": "eslint .",
+    "test": "npm run lint:js",
     "start": "webpack-dev-server --mode=development --hot",
     "build": "webpack --mode=development"
   },
