--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
   - cd web-components
 
 script:
+  - npm run lint
   - npm run test
   - npm run build
 
@@ -18,3 +19,4 @@ deploy:
     branch:
       - master
       - devel
+      - hw2
