--- a/web-components/package.json
+++ b/web-components/package.json
@@ -17,7 +17,7 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.4.0",
-    "eslint-config-reast-app": "^5.0.2",
+    "eslint-config-react-app": "^5.0.2",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-flowtype": "^4.3.0",
     "eslint-plugin-import": "^2.18.2",
