--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,7 +1,7 @@
 {
   "generator-track-mail": {
     "promptValues": {
-      "authorName": "Valentina"
+      "authorName": "Valentina Danilova"
     }
   }
 }
