--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ deploy:
   provider: pages
   skip_cleanup: true
   github_token: $repo_token
-  local_dir: build
+  local_dir: exam/build
   on:
     branch:
       - master
       - devel
-      - hw7
+      - exam
