--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Valentina Danilova",
   "dependencies": {
+    "@babel/runtime": "^7.8.7",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
     "cross-env": "^6.0.3",
@@ -20,12 +21,17 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
     "@storybook/addon-actions": "^5.3.14",
     "@storybook/addon-links": "^5.3.14",
     "@storybook/addons": "^5.3.14",
     "@storybook/preset-create-react-app": "^1.5.2",
     "@storybook/react": "^5.3.14",
-    "@wemake-services/stylelint-config-scss": "^0.1.4",
+    "@wemake-services/stylelint-config-scss": "^0.2.2",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-styled-components": "^1.10.7",
     "check-engine": "^1.8.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -38,9 +44,11 @@
     "eslint-plugin-react": "^7.16.0",
     "gh-pages": "^2.1.1",
     "husky": "^3.0.9",
+    "jest-puppeteer": "^4.4.0",
     "jscpd": "^2.0.15",
     "prettier": "^1.18.2",
     "pretty-quick": "^2.0.0",
+    "puppeteer": "^2.1.1",
     "react-test-renderer": "^16.13.0",
     "remark-cli": "^7.0.0",
     "remark-lint": "^6.0.5",
@@ -74,10 +82,11 @@
     "lint:css": "stylelint 'src/**/*.{scss,css}' && stylelint --rd 'src/**/*.{scss,css}'",
     "lint:dup": "jscpd -g --threshold=1 tests docker",
     "clean": "rm -rf build",
-    "test": "npm run test:engine && npm run lint && npm run test:unit -- --watchAll=false",
+    "test": "npm run test:engine && npm run lint && npm run test:unit -- --watchAll=false && npm run test:endtoend",
     "test:engine": "check-engine",
     "test:sec": "npm audit || true",
     "test:unit": "react-scripts test",
+    "test:endtoend": "jest -c endtoend/jest.config.js",
     "ci": "npm run test && npm run build && npm run test:sec",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
