--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@wemake-services/stylelint-config-scss": "^0.2.2",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-styled-components": "^1.10.7",
+    "css-sprite-loader": "^0.3.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
