--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "CI=false node scripts/build.js",
     "format": "prettier --write '**/*.{js,jsx,json,md}'",
     "lint": "npm run lint:js && npm run lint:dup",
     "lint:fix": "eslint --fix",
