--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-react-app": "^9.1.1",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "centrifuge": "^2.5.0",
     "cross-env": "^6.0.3",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
