--- a/ts2/package.json
+++ b/ts2/package.json
@@ -7,13 +7,16 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/d3": "^5.7.2",
+    "@types/d3-array": "^2.0.0",
     "@types/d3-cloud": "^1.2.3",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.37",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.5",
+    "canvas": "^2.6.1",
     "d3": "^5.16.0",
+    "d3-array": "^2.4.0",
     "d3-cloud": "^1.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
