--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - 'stable'
+before_install:
+  - cd ts2
 cache:
   directories:
     - node_modules
@@ -12,9 +14,9 @@ deploy:
   provider: pages
   skip_cleanup: true
   github_token: $repo_token
-  local_dir: build
+  local_dir: ts2/build
   on:
     branch:
       - master
       - devel
-      - sem2_hw5
+      - sem2_hw_ts2
