removed typo in homepage

--- a/ts2/package.json
+++ b/ts2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts2",
-  "homepage": "https://https://dvalentina.github.io/2019-2-Track-Frontend-V-Danilova/",
+  "homepage": "https://dvalentina.github.io/2019-2-Track-Frontend-V-Danilova/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
