--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - 'stable'
 before_install:
-  - cd ts2
+  - cd exam_2
 cache:
   directories:
     - node_modules
@@ -14,9 +14,9 @@ deploy:
   provider: pages
   skip_cleanup: true
   github_token: $repo_token
-  local_dir: ts2/build
+  local_dir: exam_2/build
   on:
     branch:
       - master
       - devel
-      - sem2_hw_ts2
+      - exam_2
