--- a/exam_2/package.json
+++ b/exam_2/package.json
@@ -1,5 +1,6 @@
 {
   "name": "exam_2",
+  "homepage": "https://dvalentina.github.io/2019-2-Track-Frontend-V-Danilova/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
