--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,10 @@
-# Default compose file for development.
-# Should be used directly in development.
-
-version: "3.6"
+version: '3.3'
 services:
   frontend:
     build:
       context: .
-      dockerfile: ./docker/frontend/Dockerfile
-      args:
-        NODE_ENV: "development"
-    command: npm start
+      dockerfile: Dockerfile
     volumes:
-      - .:/code
-      - /code/node_modules
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - "3000:3000"
-    networks:
-      - webnet
-    environment:
-      HOST: "0.0.0.0"
-
-networks:
-  webnet:
+      - "80:80"
