--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "2019 2 Track Frontend V Danilova",
-	"name": "2019 2 Track Frontend V Danilova",
+	"short_name": "Messenger",
+	"name": "TechnoTrack Messenger",
 	"icons": [
 		{
 			"src": "favicon.ico",
@@ -9,7 +9,7 @@
 		}
 	],
 	"start_url": ".",
-	"display": "standalone",
-	"theme_color": "#000000",
-	"background_color": "#ffffff"
+	"display": "fullscreen",
+	"theme_color": "f5f5f5",
+	"background_color": "f5f5f5"
 }
